--- a/validation.html
+++ b/validation.html
@@ -79,16 +79,13 @@
                 if (!/^\d{12}$/.test(value)) {
                     errorElement.textContent = 'Please enter a valid 12-digit Aadhar number';
                 }
-            } else if (field === 'dob') {
-                
-                var currentDate = new Date();
-                var selectedDate = new Date(value);
-                if (selectedDate > currentDate) {
-                    errorElement.textContent = 'Please enter a valid date';
-                }
-            } else if (field === 'pwd') {
+            }  else if (field === 'pwd') {
                 if (value.trim() === '') {
                     errorElement.textContent = 'Please enter password';
+                } else if (value.length < 8) {
+                    errorElement.textContent = 'Password must be at least 8 characters long';
+                } else if (!/[A-Z]/.test(value) || !/[a-z]/.test(value) || !/[0-9]/.test(value)) {
+                    errorElement.textContent = 'Password must contain at least one uppercase letter, one lowercase letter, and one digit';
                 }
             } else if (field === 'pwd2') {
                 var pass1 = document.getElementById("pwd").value;
